fix vertical alignment of urlbar icons

--- a/chrome/includes/cascade-nav-bar.css
+++ b/chrome/includes/cascade-nav-bar.css
@@ -16,8 +16,6 @@
 #urlbar,
 #urlbar * {
 
-  color: #c3c3c3
-
   padding-block-start: var(--uc-urlbar-top-spacing) !important;
 
   outline: none !important;
@@ -27,6 +25,8 @@
     --autocomplete-popup-highlight-color: blue !important;
   }
   
+  color: #c3c3c3
+
 }
 
 
@@ -66,7 +66,7 @@
 
 .urlbar-icon, #urlbar-go-button { margin: auto; }
 .urlbar-page-action { padding: 0 inherit !important; }
-.urlbar-page-action .urlbar-icon { margin-top: 6px !important; }
+.urlbar-page-action .urlbar-icon { margin-top: 4px !important; }
 
 :root {
   --autocomplete-popup-highlight-color: var(--uc-inverted-colour) !important;
